--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <html>
 
 <head>
-    <title>Powered By ! レムリン#9999</title>    <meta charset="utf-8">
+    <title>Powered By ! レムリン#9999</title>
+    <meta charset="utf-8">
     <meta property="og:title" content="Discord Rem Comunity">
     <meta property="og:description" content="디스코드 렘 커뮤니티">
     <meta content="#6799ff" data-react-helmet="true" name="theme-color">
-    <meta http-equiv="refresh" content="2; url=./index.html"> 
+    <meta http-equiv="refresh" content="2; url=./index.html">
 </head>
 
 <body bgcolor="#6799ff"></body>
 
 <div class="loading" id="image">
-    <img src="https://cdn.discordapp.com/attachments/414258067870449665/445736475158380544/discord.gif" style="display: block; margin: 400 auto;">
+    <img src="https://cdn.discordapp.com/attachments/414258067870449665/445736475158380544/discord.gif"
+        style="display: block; margin: 400 auto;">
 </div>
 
 </html1>
