--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Discord Rem Comunity">
     <meta property="og:description" content="디스코드 렘 커뮤니티">
     <meta content="#6799ff" data-react-helmet="true" name="theme-color">
-    <meta http-equiv="refresh" content="2; url=./index.html">
+    <meta http-equiv="refresh" content="2; url=./invite.html">
 </head>
 
 <body bgcolor="#6799ff"></body>
