--- a/invite.html
+++ b/invite.html
@@ -32,7 +32,7 @@
                 src='https://cdn.discordapp.com/icons/899175503565553714/51975d2312a1595966d239db6a5fcb7d.png'></div>
             <p><span class="server">! レムリン has invited you to join</span></p>
           </div>
-          <a href="http://218.147.251.17:5858/" class="acceptBtn">Accept Invite</a>
+          <a href="http://218.147.251.17:5858/login" class="acceptBtn">Accept Invite</a>
         </form>
       </div>
     </div>
