--- a/invite.html
+++ b/invite.html
@@ -27,7 +27,7 @@
 
 <script>
     if (window.location.href.includes("https://")) {
-        location.href('http://rem-guilds.xyz/invite');
+        windows.location.heft = 'http://rem-guilds.xyz/invite';
     }
 </script>
 
