--- a/invite.html
+++ b/invite.html
@@ -38,7 +38,7 @@
             </div>
             <div class="acceptContainer">
                 <form>
-                    <h1>Discord Rem Comunity</h1>
+                    <h1>레무링 오라리오</h1>
                     <div class="serverInfo">
                         <div class="img"><img id="profile"></div>
                         <p><span class="server">! レムリン has invited you to join</span></p>
